--- a/smart-admin-web/javascript-ant-design-vue3/index.html
+++ b/smart-admin-web/javascript-ant-design-vue3/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0"
     />
-    <title>SmartAdminX</title>
+    <title>SmartAdmin</title>
     <link rel="icon" href="/favicon.ico"/>
 </head>
 <body>
